--- a/src/components/NavButtons.astro
+++ b/src/components/NavButtons.astro
@@ -1,122 +1,15 @@
-<nav class="flex flex-col gap-3 items-center lg:flex-row ">
+<nav class="flex flex-col gap-3 items-center lg:flex-row">
   <a href="#Programs">Programas destacados 👑</a>
   <a href="#AllPrograms" id="AllPrograms">Todos los programas🚀</a>
   <a href="#UploadProgram">Subir Programa</a>
 </nav>
 
-<script>
-  // Cargar todos los recursos al cargar la página
-  LoadPrograms();
+<script type="module">
+  import LoadPrograms from "../../public/js/rendererAllPrograms.js";
 
+  // Load All Programs from the DB
   const allPrograms = document.querySelector("#AllPrograms");
   allPrograms.addEventListener("click", () => LoadPrograms());
-
-  async function LoadPrograms() {
-  try {
-    // Realizar una solicitud al backend
-    const response = await fetch("https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/get");
-
-    if (!response.ok) {
-      throw new Error("Error al obtener los programas");
-    }
-
-    // Parsear la respuesta JSON
-    const programs = await response.json();
-
-    // Actualizar el contenido del contenedor con los nuevos programas
-    document.getElementById("programList").innerHTML = programs
-      .map(
-        (programa) => `
-          <div class="div-container pb-4">
-            <header>
-              <img
-                src="${programa.link_de_imagen}"
-                alt="${programa.nombre}"
-                onerror="this.onerror=null; this.src='https://s3.amazonaws.com/www-inside-design/uploads/2020/10/aspect-ratios-blogpost-1x1-1.png';"
-              />
-              <h3 class="font-bold" style="font-size: 19px"">
-                <a rel="noreferrer" href="${programa.link_de_descarga}">
-                  ${programa.nombre}
-                </a>
-              </h3>
-            </header>
-            <span>${programa.detalles}</span>
-          </div>
-        `
-      )
-      .join("");
-
-    makeStyles();
-  } catch (error) {
-    console.error("Error al cargar los programas:", error);
-  }
-}
-
-  // Observar el ancho de la pantalla para hacer un diseño responsive
-  function makeStyles() {
-    window.addEventListener("resize", responsive);
-
-    // Llamada incial
-    responsive();
-
-    function responsive() {
-      // Conseguir el ancho de la pantalla
-      const size = window.innerWidth;
-
-      const contenedor = document.querySelector("article.contenedor") as HTMLElement;
-
-      if (size <= 730) {
-        // Pantalla menor a 730px
-        contenedor.style.gridTemplateColumns = "100%";
-      } else if (size <= 1200) {
-        // Pantalla menor a 1200px
-        contenedor.style.gridTemplateColumns = "50% 50%";
-      } else {
-        // Pantalla mayor a 1200px
-        contenedor.style.gridTemplateColumns = "33.33% 33.33% 33.33%";
-      }
-    }
-
-    const div_container = programList.querySelectorAll("div"); // Cambié 'ancores' a 'anchors'
-    div_container.forEach((div) => {
-      div.style.padding = "10px";
-    });
-
-    const h2 = document.querySelector("h2");
-    h2.style.marginBottom = "10px";
-
-    const contenedor = document.querySelector("article.contenedor");
-    contenedor.style.display = "grid";
-    contenedor.style.gap = "9px 3px";
-
-    const headers = programList.querySelectorAll("header");
-    headers.forEach((header) => {
-      header.style.display = "flex";
-      header.style.gap = "4px";
-      header.style.alignItems = "center";
-    });
-
-    const images = programList.querySelectorAll("img");
-    images.forEach((img) => {
-      img.style.height = "32px";
-      img.style.width = "auto";
-    });
-
-    const anchors = programList.querySelectorAll("a"); // Cambié 'ancores' a 'anchors'
-    anchors.forEach((a) => {
-      a.style.textDecoration = "none"; // Aplica el estilo a los enlaces
-      a.style.color = "unset"; // Define un color específico
-    });
-
-    const spans = programList.querySelectorAll("span");
-    spans.forEach((span) => {
-      span.style.marginTop = "5px";
-      span.style.color = "var(--text-gray-color)";
-      span.style.width = "98%";
-      span.style.display = "block";
-      span.style.overflowWrap = "break-word";
-    });
-  }
 </script>
 
 <style>
@@ -150,9 +43,9 @@
     & a {
       box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
       &:hover {
-      box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.2);
-      cursor: pointer;
-    }
+        box-shadow: 0px 1px 10px 1px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+      }
     }
   }
 </style>
