--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,14 @@ import UploadProgram from "../components/UploadProgram.astro";
 import CommentsSection from "../components/CommentsSection.astro";
 import FeedBack from "../components/NewComment.astro";
 import NavButtons from "../components/NavButtons.astro";
+
+// JS
 ---
 
 <Layout title="Soft-Share - Repositorio de tus Programas">
   <main class="w-11/12 lg:w-9/12">
     <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl">Soft-Share</h1>
-    <p class="presentation  leading-6 mt-2 pt-0 text-sm lg:text-[19px]" style="line-height: 1.5rem">
+    <p class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]" style="line-height: 1.5rem">
       Encuentra una variedad de herramientas informáticas, desde aplicaciones
       completas hasta scripts útiles. <font color="008f39">Comparte</font> tus propios
       programas con la comunidad y vota por los mejores. Aprovecha una plataforma
@@ -51,4 +53,14 @@ import NavButtons from "../components/NavButtons.astro";
       backdrop-filter: blur(1px);
     }
   </style>
+
 </Layout>
+
+<script type="module">
+  
+  import LoadPrograms from "../js/rendererAllPrograms.js";
+
+  // Everty time the page is reload, load all programs
+  LoadPrograms();
+
+</script>
