--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,18 @@ import NavButtons from "../components/NavButtons.astro";
 <Layout title="Soft-Share - Repositorio de tus Programas">
   <main class="w-11/12 lg:w-9/12">
     <h1 class="font-bold mt-2 pb-0 text-5xl lg:text-7xl">Soft-Share</h1>
-    <p class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]" style="line-height: 1.5rem">
+    <p
+      class="presentation leading-6 mt-2 pt-0 text-base lg:text-[19px]"
+      style="line-height: 1.5rem"
+    >
       Encuentra una variedad de herramientas informáticas, desde aplicaciones
-      completas hasta scripts útiles. <font color="008f39">Comparte</font> tus propios
-      programas con la comunidad y vota por los mejores. Aprovecha una plataforma
-      colaborativa para <font color="094293">explorar</font> , <font
-        color="a65e2e">obtener</font
-      > y
-      <font color="4b0082">contribuir</font> tus <span
+      completas hasta scripts útiles. <span style="color: #008f39"
+        >Comparte</span
+      > tus propios programas con la comunidad y vota por los mejores. Aprovecha
+      una plataforma colaborativa para <span style="color: #094293"
+        >explorar</span
+      > , <span style="color: #a65e2e">obtener</span> y
+      <span style="color: #4b0082">contribuir</span> tus <span
         >recursos informáticos.</span
       >
     </p>
@@ -35,6 +39,9 @@ import NavButtons from "../components/NavButtons.astro";
   </main>
 
   <style>
+    span {
+      text-shadow: 1px 1px rgba(0, 0, 0, 0.178)
+    }
     body {
       padding-bottom: 100px;
     }
@@ -53,14 +60,11 @@ import NavButtons from "../components/NavButtons.astro";
       backdrop-filter: blur(1px);
     }
   </style>
-
 </Layout>
 
 <script type="module">
-  
   import LoadPrograms from "../js/rendererAllPrograms.js";
 
   // Everty time the page is reload, load all programs
   LoadPrograms();
-
 </script>
