Cambie nombres de Ingles a Español y borre imagenes que no se usaban

--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -1,12 +1,12 @@
 ---
-import SearchBtn from "./Search-btn.astro";
+import BotonBuscar from "./BotonBuscar.astro";
 ---
 
 <article>
   <header class="flex flex-col gap-y-4 lg:flex-row">
     <h2 class="font-bold underline underline-offset-[10px] text-1xl lg:text-3xl text-center">Programas destacados👑</h2>
     <div class="mb-4 lg:mb-0">
-      <SearchBtn />
+      <BotonBuscar />
     </div>
   </header>
   <button id="reloadButton"><img src="reload.svg" alt="" /></button>
