--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,8 +21,8 @@ import { ViewTransitions } from "astro:transitions";
       content="Software, Subir, Descargar, Donwload, Upload, Share"
     />
     <!-- Icono -->
-    <link rel="icon" href="/a5.ico" >
-    <link rel="icon" href="/a5.svg" type="image/svg+xml" sizes="512x512">
+    <link rel="icon" href="/a5.ico" />
+    <link rel="icon" href="/a5.svg" type="image/svg+xml" sizes="512x512" />
     <meta name="apple-mobile-web-app-title" content="Soft-Share page" />
     <link rel="manifest" href="/logo.png/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
@@ -104,12 +104,9 @@ import { ViewTransitions } from "astro:transitions";
   }
 
   .background {
-
-  background-color: var(--background-color);
-  background-image: 
-    linear-gradient(to right, #f0f0f0 1px, transparent 1px),
-    linear-gradient(to bottom, #f0f0f0 1px, transparent 1px);
-  background-size: 6rem 4rem;
-}
-
+    background-color: var(--background-color);
+    background-image: linear-gradient(to right, #f0f0f0 1px, transparent 1px),
+      linear-gradient(to bottom, #f0f0f0 1px, transparent 1px);
+    background-size: 6rem 4rem;
+  }
 </style>
