--- a/src/components/AgregarComentario.astro
+++ b/src/components/AgregarComentario.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
       <h2 class="font-bold text-center">¡Déjame un comentario!🪅</h2>
     </article>
 
-    <form id="programForm">
+    <form id="formularioDePrograma">
       <div class="input-group">
         <input
           type="text"
@@ -23,7 +23,7 @@ import Layout from "../layouts/Layout.astro";
 
       <div class="input-group">
         <input
-        class="lg:min-w-[30rem] lg:min-h-[5rem]"
+          class="lg:min-w-[30rem] lg:min-h-[5rem]"
           type="text"
           id="comentario"
           title="Dejame tu sugerencia, problema, crítica o simplemente un saludo🥰"
@@ -32,13 +32,16 @@ import Layout from "../layouts/Layout.astro";
         <label for="comentario">Tú comentario 🧐</label>
       </div>
 
-      <button class="font-bold p-0 after:font-bold" type="submit" id="enviar-comentario"></button>
+      <button
+        class="font-bold p-0 after:font-bold"
+        type="submit"
+        id="enviar-comentario"></button>
     </form>
   </main>
 </Layout>
 
 <script type="module">
-  let lastCommentTime = null; // Almacena la hora del último comentario
+  let horaUltimoComentario = null; // Almacena la hora del último comentario
 
   document
     .getElementById("enviar-comentario")
@@ -48,45 +51,48 @@ import Layout from "../layouts/Layout.astro";
       const autor = document.getElementById("autor").value;
       const comentario = document.getElementById("comentario").value;
       const fecha = GetDateARG();
-      console.log(fecha)
+      console.log(fecha);
 
       // Verificar si han pasado al menos 2 minutos desde el último comentario
-      if (!canCommentAgain()) {
+      if (!poderComentar()) {
         alert("Debes esperar al menos 2 minutos antes de comentar nuevamente.");
         return;
       }
 
-      const response = await fetch("https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-        },
-        body: JSON.stringify({
-          autor,
-          comentario,
-          fecha,
-        }),
-      });
+      const respuesta = await fetch(
+        "https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments",
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            autor,
+            comentario,
+            fecha,
+          }),
+        }
+      );
 
-      loadComments()
-      console.log(response);
+      cargarComentarios();
+      console.log(respuesta);
     });
 
-  function canCommentAgain() {
-    if (!lastCommentTime) {
+  function poderComentar() {
+    if (!horaUltimoComentario) {
       // Si no hay un último comentario, permitir comentar
       return true;
     }
 
-    const currentTime = new Date(); // Hora actual
-    const diffInMilliseconds = currentTime - lastCommentTime; // Diferencia en ms
-    const diffInMinutes = diffInMilliseconds / (1000 * 60); // Convertir a minutos
+    const horaActual = new Date(); // Hora actual
+    const diferenciaEnMilisegundos = horaActual - horaUltimoComentario; // Diferencia en ms
+    const diferenciaenMinutos = diferenciaEnMilisegundos / (1000 * 60); // Convertir a minutos
 
-    return diffInMinutes >= 2; // Permitir si han pasado 2 minutos o más
+    return diferenciaenMinutos >= 2; // Permitir si han pasado 2 minutos o más
   }
 
   function GetDateARG() {
-    const fullDate = new Date();
+    const fechaFinal = new Date();
     const options = {
       year: "numeric",
       month: "2-digit",
@@ -95,29 +101,29 @@ import Layout from "../layouts/Layout.astro";
       minute: "2-digit",
       hour12: true,
     };
-    const formattedDate = fullDate.toLocaleString("en-US", options);
+    const fechaFormateada = fechaFinal.toLocaleString("en-US", options);
 
     // Separar fecha y hora para personalizar el formato
-    const [datePart, timePart] = formattedDate.split(", ");
+    const [datePart, timePart] = fechaFormateada.split(", ");
     const [month, day, year] = datePart.split("/");
-    const resultString = `${day}/${month}/${year} ${timePart}`;
-    return resultString;
+    const fechaResultante = `${day}/${month}/${year} ${timePart}`;
+    return fechaResultante;
   }
 
-  loadComments();
-  async function loadComments() {
+  cargarComentarios();
+  async function cargarComentarios() {
+    const respuesta = await fetch(
+      "https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments"
+    );
 
-
-    const response = await fetch('https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments')
-    
-    if (!response.ok) {
+    if (!respuesta.ok) {
       throw new Error("Error al obtener los programas");
     }
 
     // Parsear la respuesta JSON
-    const programs = await response.json();
+    const programas = await respuesta.json();
 
-    document.getElementById("commentsSection").innerHTML = programs
+    document.getElementById("commentsSection").innerHTML = programas
       .map(
         (comentario) => `
           <article>
@@ -150,7 +156,7 @@ import Layout from "../layouts/Layout.astro";
         El.style.boxShadow = `1px 1px 10px 0px rgba(0, 0, 0, 0.2)`;
         El.style.wordBreak = "break-word"; // Asegura que las palabras largas se rompan si es necesario
         El.style.overflowWrap = "break-word";
-        El.style.backdropFilter = "blur(10px)"
+        El.style.backdropFilter = "blur(10px)";
       });
 
       const h3 = commentsSection.querySelectorAll("h3");
@@ -183,12 +189,7 @@ import Layout from "../layouts/Layout.astro";
   }
 </script>
 <style>
-
-:root {
-    /* FONT */
-    --font: "Poppins", sans-serif;
-
-    /* COLORS */
+  :root {
     --bg-color: white;
     --conic-gradient: conic-gradient(
       #ff2e2e,
@@ -263,11 +264,6 @@ import Layout from "../layouts/Layout.astro";
   #nombre {
     width: 12rem;
   }
-
-  /* #comentario {
-    width: 30rem;
-    height: 5rem;
-  } */
 
   button {
     height: 2.5em;
