Todo funciona, pero los estilos estan rotos

--- a/src/components/AgregarComentario.astro
+++ b/src/components/AgregarComentario.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
       <h2 class="font-bold text-center">¡Déjame un comentario!🪅</h2>
     </article>
 
-    <form id="formularioDePrograma">
+    <form id="formularioDeComentario">
       <div class="input-group">
         <input
           type="text"
