--- a/src/components/SeccionDeComentarios.astro
+++ b/src/components/SeccionDeComentarios.astro
@@ -19,14 +19,13 @@ import Layout from "../layouts/Layout.astro";
   } */
 </style>
 <script>
-
   // Cargar los comentarios cuando la página carga
   loadComments();
   async function loadComments() {
+    const response = await fetch(
+      "https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments"
+    );
 
-
-    const response = await fetch('https://backend-soft-share-1tr9ac9dt-nachos-projects-077bc528.vercel.app/comments')
-    
     if (!response.ok) {
       throw new Error("Error al obtener los programas");
     }
@@ -37,10 +36,10 @@ import Layout from "../layouts/Layout.astro";
     document.getElementById("commentsSection").innerHTML = programs
       .map(
         (comentario) => `
-          <article class="flex">
-        <div class="flex flex-col">
-          <h3>${comentario.autor}</h3>
-          <span>${comentario.fecha}</span>
+          <article>
+        <div>
+        <h3>${comentario.autor}</h3>
+        <span>${comentario.fecha}</span>
         </div>
         
         <p>${comentario.comentario}</p>
@@ -48,54 +47,17 @@ import Layout from "../layouts/Layout.astro";
         `
       )
       .join("");
-    makeStyles();
+    function cargarCSS(ruta) {
+      const head = document.head;
+      const link = document.createElement("link");
 
-    function makeStyles() {
-      const commentsSection = document.getElementById("commentsSection");
+      link.rel = "stylesheet";
+      link.href = ruta;
 
-      const colors = [
-        "rgba(176, 229, 124, 0.5)", // Verde pastel transparente
-        "rgba(108, 155, 207, 0.5)", // Azul pastel transparente
-        "rgba(243, 199, 169, 0.5)", // Naranja pastel transparente
-        "rgba(193, 163, 224, 0.5)", // Morado pastel transparente
-      ];
-
-      const comentarios_container = commentsSection.querySelectorAll("article");
-      comentarios_container.forEach((El) => {
-        El.style.marginBottom = "3rem";
-        El.style.padding = "1rem";
-        El.style.borderRadius = "10px";
-        El.style.boxShadow = `1px 1px 10px 0px rgba(0, 0, 0, 0.2)`;
-        El.style.wordBreak = "break-word"; // Asegura que las palabras largas se rompan si es necesario
-        El.style.overflowWrap = "break-word";
-        El.style.backdropFilter = "blur(10px)"
-      });
-
-      const h3 = commentsSection.querySelectorAll("h3");
-      h3.forEach((El) => {
-        const color = colors[Math.floor(Math.random() * colors.length)];
-        El.style.backgroundColor = `${color}`;
-        El.style.borderRadius = "6px";
-        El.style.padding = "0.2rem";
-      });
-
-      const p = commentsSection.querySelectorAll("p");
-      p.forEach((El) => {
-        El.style.fontStyle = "italic";
-        El.style.marginLeft = "1rem";
-        El.style.padding = "1rem";
-      });
-      const span = commentsSection.querySelectorAll("span");
-      span.forEach((El) => {
-        El.style.fontWeight = "bold";
-        El.style.fontSize = "0.9rem";
-      });
-      const div = commentsSection.querySelectorAll("div");
-      div.forEach((El) => {
-        El.style.display = "flex";
-        El.style.justifyContent = "space-between";
-      });
+      head.appendChild(link);
+      console.log(`Hoja de estilos ${ruta} cargada.`);
     }
+    cargarCSS("/src/css/estilarComentarios.css");
   }
 </script>
 
