Moviendo todo a public, último intento.

--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -1,7 +1,7 @@
 <main class="flex flex-col h-12 overflow-hidden transition-all">
   <img
     class="size-12 self-center"
-    src="src/css/arrow-down.svg"
+    src="/public/arrow-down.svg"
     alt="arrow-down"
   />
 
@@ -199,8 +199,8 @@
 </style>
 
 <script>
-  import BuscarProgramas from "../../src/js/BuscarProgramas.js";
-
+  import BuscarProgramas from "../../public/js/BuscarProgramas.js";
+  
   // Obtener todos los checkboxes
   const checkboxes = document.querySelectorAll('input[type="checkbox"]');
 
