--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,8 +59,8 @@ import SeccionDeComentarios from "../components/SeccionDeComentarios.astro"
 </Layout>
 
 <script type="module">
-  import cargarTodosLosProgramas from "../../src/js/CargarTodosLosProgramas.js";
+  import cargarProgramas from "../../public/js/CargarTodosLosProgramas.js";
 
   // Cargar todos los programas
-  cargarTodosLosProgramas();
+  cargarProgramas();
 </script>
