--- a/src/components/ProgramasDestacados.astro
+++ b/src/components/ProgramasDestacados.astro
@@ -24,8 +24,8 @@ import ControlCategorias from "./ControlCategorias.astro";
 </article>
 
 <script>
-  import cargarProgramas from "../../src/js/CargarTodosLosProgramas.js";
-  import BuscarProgramas from "../../src/js/BuscarProgramas.js";
+  import cargarProgramas from "../../public/js/CargarTodosLosProgramas.js";
+  import BuscarProgramas from "../../public/js/BuscarProgramas.js";
 
   declare global {
     interface Window {
