pasando cosas a public

--- a/src/components/SeccionDeComentarios.astro
+++ b/src/components/SeccionDeComentarios.astro
@@ -57,7 +57,7 @@ import Layout from "../layouts/Layout.astro";
       head.appendChild(link);
       console.log(`Hoja de estilos ${ruta} cargada.`);
     }
-    cargarCSS("/src/css/estilarComentarios.css");
+    cargarCSS("/css/estilarComentarios.css");
   }
 </script>
 
