moviendo arrow a public

--- a/src/components/ControlCategorias.astro
+++ b/src/components/ControlCategorias.astro
@@ -1,7 +1,7 @@
 <main class="flex flex-col h-12 overflow-hidden transition-all">
   <img
     class="size-12 self-center"
-    src="/public/arrow-down.svg"
+    src="/arrow-down.svg"
     alt="arrow-down"
   />
 
